--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,14 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "@tailwindcss/vite": "^4.0.3",
+    "framer-motion": "^12.0.8",
+    "maath": "^0.10.8",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.3",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "valtio": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
